syntax = "proto3";

package core_grpc;

message Coordinate {
    float x = 1;
    float y = 2;
    float z = 3;
}

message JoinRequest {
    // `id` is expected to be unique for each client
    string id = 1;
    Coordinate position = 2;
}

message JoinResponse {
    enum Result {
        SUCCESS = 0;
        FAILURE = 1;
    }
    Result result = 1;
    Coordinate position = 2;
}

message SubscribeRequest {
    string id = 1;
    int32 radius = 2;
}

message SubscribeResponse {
    message Entity {
        string id = 1;
        Coordinate position = 2;
    }
    repeated Entity entities = 1;
}

service CoreGRPC {
    rpc Join (JoinRequest) returns (JoinResponse) {}

    rpc Subscribe (SubscribeRequest) returns (stream SubscribeResponse) {}

    // TODO: Add RPCs for movement
}
